@@ -649,13 +649,6 @@ argument_list|(
 name|rsp
 argument_list|)
 expr_stmt|;
-name|rsp
-operator|.
-name|setHttpCaching
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 name|SolrParams
 name|params
 init|=
