@@ -285,6 +285,13 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
+DECL|field|httpCaching
+specifier|protected
+name|boolean
+name|httpCaching
+init|=
+literal|true
+decl_stmt|;
 comment|/** shorten the class references for utilities */
 DECL|class|U
 specifier|private
@@ -419,6 +426,42 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+if|if
+condition|(
+name|initArgs
+operator|!=
+literal|null
+condition|)
+block|{
+name|Object
+name|caching
+init|=
+name|initArgs
+operator|.
+name|get
+argument_list|(
+literal|"httpCaching"
+argument_list|)
+decl_stmt|;
+name|httpCaching
+operator|=
+name|caching
+operator|!=
+literal|null
+condition|?
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|caching
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+else|:
+literal|true
+expr_stmt|;
+block|}
 block|}
 DECL|method|getInitArgs
 specifier|public
@@ -473,6 +516,13 @@ argument_list|,
 name|appends
 argument_list|,
 name|invariants
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|.
+name|setHttpCaching
+argument_list|(
+name|httpCaching
 argument_list|)
 expr_stmt|;
 name|handleRequestBody
