@@ -729,13 +729,6 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
-name|rsp
-operator|.
-name|setHttpCaching
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 name|SolrParams
 name|p
 init|=
