@@ -891,13 +891,6 @@ argument_list|()
 else|:
 literal|null
 decl_stmt|;
-name|rsp
-operator|.
-name|setHttpCaching
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|timer
